--- a/Calculator-Iphone/style.css
+++ b/Calculator-Iphone/style.css
@@ -3,11 +3,15 @@
     src: url(./font/MYRIADPRO-REGULAR.OTF); /* Путь к файлу со шрифтом */
    }
 .calculator {
+    margin-top: 50px;
     background-color: black;
     width: 330px;
     height: 670px;
     border-radius: 60px;
     position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .calculator__function {
