--- a/Calculator-Iphone/style.css
+++ b/Calculator-Iphone/style.css
@@ -38,7 +38,7 @@
     border: none;
     cursor: pointer;
     font-family: Myriad Pro;
-    text-align: center;
+    text-align: -webkit-center;
 }
 .calculator__btn-style2 {
     width: 55px;
