--- a/Calculator-Iphone/style.css
+++ b/Calculator-Iphone/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 @font-face {
     font-family: Myriad Pro; /* Имя шрифта */
     src: url(./font/MYRIADPRO-REGULAR.OTF); /* Путь к файлу со шрифтом */
